src/Groups/Groups/docs/v1.0-beta/Microsoft.Graph.Groups.md
---
Module Name: Microsoft.Graph.Groups
Module Guid: cd99d345-753a-48d4-ad2c-5afbdea12ab8
Download Help Link: https://docs.microsoft.com/en-us/powershell/module/microsoft.graph.groups
Help Version: 1.0.0.0
Locale: en-US
---

# Microsoft.Graph.Groups Module
## Description
Microsoft Graph PowerShell Cmdlets

## Microsoft.Graph.Groups Cmdlets
### [Add-MgGroupLifecyclePolicyGroup](Add-MgGroupLifecyclePolicyGroup.md)
Invoke action addGroup

### [Get-MgGroup](Get-MgGroup.md)
Get entity from groups by key

### [Get-MgGroupAcceptedSender](Get-MgGroupAcceptedSender.md)
Get acceptedSenders from groups

### [Get-MgGroupAppRoleAssignment](Get-MgGroupAppRoleAssignment.md)
Get appRoleAssignments from groups

### [Get-MgGroupConversation](Get-MgGroupConversation.md)
Get conversations from groups

### [Get-MgGroupConversationThread](Get-MgGroupConversationThread.md)
Get threads from groups

### [Get-MgGroupConversationThreadPost](Get-MgGroupConversationThreadPost.md)
Get posts from groups

### [Get-MgGroupConversationThreadPostAttachment](Get-MgGroupConversationThreadPostAttachment.md)
Get attachments from groups

### [Get-MgGroupConversationThreadPostExtension](Get-MgGroupConversationThreadPostExtension.md)
Get extensions from groups

### [Get-MgGroupConversationThreadPostMention](Get-MgGroupConversationThreadPostMention.md)
Get mentions from groups

### [Get-MgGroupConversationThreadPostMultiValueExtendedProperty](Get-MgGroupConversationThreadPostMultiValueExtendedProperty.md)
Get multiValueExtendedProperties from groups

### [Get-MgGroupConversationThreadPostSingleValueExtendedProperty](Get-MgGroupConversationThreadPostSingleValueExtendedProperty.md)
Get singleValueExtendedProperties from groups

### [Get-MgGroupCreatedOnBehalf](Get-MgGroupCreatedOnBehalf.md)
Get createdOnBehalfOf from groups

### [Get-MgGroupEndpoint](Get-MgGroupEndpoint.md)
Get endpoints from groups

### [Get-MgGroupExtension](Get-MgGroupExtension.md)
Get extensions from groups

### [Get-MgGroupLifecyclePolicyGroupLifecyclePolicyGroupLifecyclePolicy](Get-MgGroupLifecyclePolicyGroupLifecyclePolicyGroupLifecyclePolicy.md)
Get entity from groupLifecyclePolicies by key

### [Get-MgGroupMember](Get-MgGroupMember.md)
Get memberOf from groups

### [Get-MgGroupOwner](Get-MgGroupOwner.md)
Get owners from groups

### [Get-MgGroupPermissionGrant](Get-MgGroupPermissionGrant.md)
Get permissionGrants from groups

### [Get-MgGroupPhoto](Get-MgGroupPhoto.md)
Get photo from groups

### [Get-MgGroupRejectedSender](Get-MgGroupRejectedSender.md)
Get rejectedSenders from groups

### [Get-MgGroupSetting](Get-MgGroupSetting.md)
Get settings from groups

### [Get-MgGroupThread](Get-MgGroupThread.md)
Get threads from groups

### [Get-MgGroupThreadPost](Get-MgGroupThreadPost.md)
Get inReplyTo from groups

### [Get-MgGroupThreadPostAttachment](Get-MgGroupThreadPostAttachment.md)
Get attachments from groups

### [Get-MgGroupThreadPostExtension](Get-MgGroupThreadPostExtension.md)
Get extensions from groups

### [Get-MgGroupThreadPostMention](Get-MgGroupThreadPostMention.md)
Get mentions from groups

### [Get-MgGroupThreadPostMultiValueExtendedProperty](Get-MgGroupThreadPostMultiValueExtendedProperty.md)
Get multiValueExtendedProperties from groups

### [Get-MgGroupThreadPostSingleValueExtendedProperty](Get-MgGroupThreadPostSingleValueExtendedProperty.md)
Get singleValueExtendedProperties from groups

### [Get-MgGroupTransitiveMember](Get-MgGroupTransitiveMember.md)
Get transitiveMemberOf from groups

### [Get-MgUserJoinedGroup](Get-MgUserJoinedGroup.md)
Get joinedGroups from users

### [Invoke-MgRenewGroupLifecyclePolicyGroup](Invoke-MgRenewGroupLifecyclePolicyGroup.md)
Invoke action renewGroup

### [New-MgGroup](New-MgGroup.md)
Add new entity to groups

### [New-MgGroupAcceptedSender](New-MgGroupAcceptedSender.md)
Create new navigation property to acceptedSenders for groups

### [New-MgGroupAppRoleAssignment](New-MgGroupAppRoleAssignment.md)
Create new navigation property to appRoleAssignments for groups

### [New-MgGroupConversation](New-MgGroupConversation.md)
Create new navigation property to conversations for groups

### [New-MgGroupConversationThread](New-MgGroupConversationThread.md)
Create new navigation property to threads for groups

### [New-MgGroupConversationThreadPost](New-MgGroupConversationThreadPost.md)
Create new navigation property to posts for groups

### [New-MgGroupConversationThreadPostAttachment](New-MgGroupConversationThreadPostAttachment.md)
Create new navigation property to attachments for groups

### [New-MgGroupConversationThreadPostExtension](New-MgGroupConversationThreadPostExtension.md)
Create new navigation property to extensions for groups

### [New-MgGroupConversationThreadPostMention](New-MgGroupConversationThreadPostMention.md)
Create new navigation property to mentions for groups

### [New-MgGroupConversationThreadPostMultiValueExtendedProperty](New-MgGroupConversationThreadPostMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for groups

### [New-MgGroupConversationThreadPostSingleValueExtendedProperty](New-MgGroupConversationThreadPostSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for groups

### [New-MgGroupEndpoint](New-MgGroupEndpoint.md)
Create new navigation property to endpoints for groups

### [New-MgGroupExtension](New-MgGroupExtension.md)
Create new navigation property to extensions for groups

### [New-MgGroupLifecyclePolicyGroupLifecyclePolicyGroupLifecyclePolicy](New-MgGroupLifecyclePolicyGroupLifecyclePolicyGroupLifecyclePolicy.md)
Add new entity to groupLifecyclePolicies

### [New-MgGroupMember](New-MgGroupMember.md)
Add a member to an Office 365 group or security group through the members navigation property.

### [New-MgGroupPermissionGrant](New-MgGroupPermissionGrant.md)
Create new navigation property to permissionGrants for groups

### [New-MgGroupPhoto](New-MgGroupPhoto.md)
Create new navigation property to photos for groups

### [New-MgGroupRejectedSender](New-MgGroupRejectedSender.md)
Create new navigation property to rejectedSenders for groups

### [New-MgGroupSetting](New-MgGroupSetting.md)
Create new navigation property to settings for groups

### [New-MgGroupThread](New-MgGroupThread.md)
Create new navigation property to threads for groups

### [New-MgGroupThreadPost](New-MgGroupThreadPost.md)
Create new navigation property to posts for groups

### [New-MgGroupThreadPostAttachment](New-MgGroupThreadPostAttachment.md)
Create new navigation property to attachments for groups

### [New-MgGroupThreadPostExtension](New-MgGroupThreadPostExtension.md)
Create new navigation property to extensions for groups

### [New-MgGroupThreadPostMention](New-MgGroupThreadPostMention.md)
Create new navigation property to mentions for groups

### [New-MgGroupThreadPostMultiValueExtendedProperty](New-MgGroupThreadPostMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for groups

### [New-MgGroupThreadPostSingleValueExtendedProperty](New-MgGroupThreadPostSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for groups

### [New-MgUserJoinedGroup](New-MgUserJoinedGroup.md)
Create new navigation property to joinedGroups for users

### [Remove-MgGroup](Remove-MgGroup.md)
Delete entity from groups

### [Remove-MgGroupLifecyclePolicyGroup](Remove-MgGroupLifecyclePolicyGroup.md)
Invoke action removeGroup

### [Remove-MgGroupLifecyclePolicyGroupLifecyclePolicyGroupLifecyclePolicy](Remove-MgGroupLifecyclePolicyGroupLifecyclePolicyGroupLifecyclePolicy.md)
Delete entity from groupLifecyclePolicies

### [Update-MgGroup](Update-MgGroup.md)
Update entity in groups

### [Update-MgGroupAcceptedSender](Update-MgGroupAcceptedSender.md)
Update the navigation property acceptedSenders in groups

### [Update-MgGroupAppRoleAssignment](Update-MgGroupAppRoleAssignment.md)
Update the navigation property appRoleAssignments in groups

### [Update-MgGroupConversation](Update-MgGroupConversation.md)
Update the navigation property conversations in groups

### [Update-MgGroupConversationThread](Update-MgGroupConversationThread.md)
Update the navigation property threads in groups

### [Update-MgGroupConversationThreadPost](Update-MgGroupConversationThreadPost.md)
Update the navigation property posts in groups

### [Update-MgGroupConversationThreadPostAttachment](Update-MgGroupConversationThreadPostAttachment.md)
Update the navigation property attachments in groups

### [Update-MgGroupConversationThreadPostExtension](Update-MgGroupConversationThreadPostExtension.md)
Update the navigation property extensions in groups

### [Update-MgGroupConversationThreadPostMention](Update-MgGroupConversationThreadPostMention.md)
Update the navigation property mentions in groups

### [Update-MgGroupConversationThreadPostMultiValueExtendedProperty](Update-MgGroupConversationThreadPostMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in groups

### [Update-MgGroupConversationThreadPostSingleValueExtendedProperty](Update-MgGroupConversationThreadPostSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in groups

### [Update-MgGroupEndpoint](Update-MgGroupEndpoint.md)
Update the navigation property endpoints in groups

### [Update-MgGroupExtension](Update-MgGroupExtension.md)
Update the navigation property extensions in groups

### [Update-MgGroupLifecyclePolicyGroupLifecyclePolicyGroupLifecyclePolicy](Update-MgGroupLifecyclePolicyGroupLifecyclePolicyGroupLifecyclePolicy.md)
Update entity in groupLifecyclePolicies

### [Update-MgGroupPermissionGrant](Update-MgGroupPermissionGrant.md)
Update the navigation property permissionGrants in groups

### [Update-MgGroupPhoto](Update-MgGroupPhoto.md)
Update the navigation property photo in groups

### [Update-MgGroupRejectedSender](Update-MgGroupRejectedSender.md)
Update the navigation property rejectedSenders in groups

### [Update-MgGroupSetting](Update-MgGroupSetting.md)
Update the navigation property settings in groups

### [Update-MgGroupThread](Update-MgGroupThread.md)
Update the navigation property threads in groups

### [Update-MgGroupThreadPost](Update-MgGroupThreadPost.md)
Update the navigation property inReplyTo in groups

### [Update-MgGroupThreadPostAttachment](Update-MgGroupThreadPostAttachment.md)
Update the navigation property attachments in groups

### [Update-MgGroupThreadPostExtension](Update-MgGroupThreadPostExtension.md)
Update the navigation property extensions in groups

### [Update-MgGroupThreadPostMention](Update-MgGroupThreadPostMention.md)
Update the navigation property mentions in groups

### [Update-MgGroupThreadPostMultiValueExtendedProperty](Update-MgGroupThreadPostMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in groups

### [Update-MgGroupThreadPostSingleValueExtendedProperty](Update-MgGroupThreadPostSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in groups

### [Update-MgUserJoinedGroup](Update-MgUserJoinedGroup.md)
Update the navigation property joinedGroups in users

